[package]
name = "oshmornegar"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Graphics API
egui = "0.32.0"
# Graphics framework
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    # "x11",           # To support older Linux distributions (restores one of the default features)
] }
# Plotting
egui_plot = "0.33.0"

# For managing a git repo
git2 = "0.20.2"
# Serialization
serde = { version = "1.0.219", features = ["derive"] }

tempfile = "3.20.0"
# Code line counting
tokei = "12.1.2"
env_logger = "0.11.8"
fs_extra = "1.3.0"
log = "0.4.27"
clap = { version = "4.5.41", features = ["derive"] }
chrono = "0.4.41"
